removed unwanted images and updated contents and images

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm col-md-3 ftco-animate">
-					<a href="#" class="partner"><img src="images/partner-1.png" class="img-fluid"
+					<a href="https://www.ducenit.com/" target="_blank" class="partner"><img src="img/companies/company-1.png" class="img-fluid"
 							alt="Colorlib Template"></a>
 				</div>
 			</div>
@@ -440,62 +440,57 @@
 			<div class="row no-gutters">
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/work-1.jpg);">
+						style="background-image: url(img/projects/Analance.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
+							<h3><a href="javascript:void(0)">Analance 3.0</a></h3>
+							<span>Ducen IT</span>
+							<p style="color: black">An Analytics Product of Ducen, It is a platform that combines Data Science, Business Intelligence, and Data Management into one integrated self-serve platform.</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/work-2.jpg);">
+						style="background-image: url(img/projects/OCIO.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
+							<h3><a href="javascript:void(0)">OCIO</a></h3>
+							<span>Canada's Telecom Provider</span>
+							<p style="color: black">It is an internal Application to handle the Appraisal and Performance for Management level people. It is an Extended functionality application to the Analance 2.0 the product of Ducen IT.</p>
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
+						style="background-image: url(img/projects/WSS.jpg);">
+						<div class="overlay"></div>
+						<div class="text text-center p-4">
+							<h3><a href="javascript:void(0)">WSS</a></h3>
+							<span>Canada's Telecom Provider</span>
+							<p style="color: black">WSS (Wireless Self serve) is a small module in communication based E-commerce application. This module contains prepaid and postpaid data recharge functionality and Mobile purchase feature for their customers.</p>
 						</div>
 					</div>
 				</div>
 
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/work-3.jpg);">
+						style="background-image: url(img/projects/WPM.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
+							<h3><a href="javascript:void(0)">WPM</a></h3>
+							<span>India's Pharmacy Company</span>
+							<p style="color: black">WPM (Work Permit Manager) is an internal Application of a Pharmacy company, to monitor the regular activities on daily bases of their employees.</p>
 						</div>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/work-4.jpg);">
+						style="background-image: url(img/projects/UPPM.jpg);">
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/work-5.jpg);">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="project img ftco-animate d-flex justify-content-center align-items-center"
-						style="background-image: url(images/work-6.jpg);">
-						<div class="overlay"></div>
-						<div class="text text-center p-4">
-							<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-							<span>Web Design</span>
+							<h3><a href="javascript:void(0)">UPPM</a></h3>
+							<span>India's Pharmacy Company</span>
+							<p style="color: black">UPPM is an Pharmacy company Application for medicine Approval process in Ukraine. It has 9 mandatory approval processes and has 3 optional processes for design approval processes.</p>
 						</div>
 					</div>
 				</div>
@@ -592,7 +587,7 @@
 						</div>
 						<div>
 							<h3 class="mb-4">Website</h3>
-							<p><a href="#">vijaydeepak.info</a></p>
+							<p><a href="https://vijaydeepak.info" target="_blank">vijaydeepak.info</a></p>
 						</div>
 					</div>
 				</div>
@@ -602,9 +597,9 @@
 
 	<footer class="ftco-footer ftco-section">
 		<div class="container">
-			<div class="row mb-5">
+			<div class="row">
 				<div class="col-md">
-					<div class="ftco-footer-widget mb-4">
+					<div class="ftco-footer-widget mb-2">
 					<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
 						<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
 						<li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
@@ -619,6 +614,11 @@
 						Copyright &copy;
 						<script>document.write(new Date().getFullYear());</script> All rights reserved
 					</p>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-12 mb-3 text-center">
+					Powered by <span class="pwa">P<span class="pwa-w">W</span>A</span>
 				</div>
 			</div>
 		</div>
