--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
 					<li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
 					<li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
-					<li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li>
+					<!-- <li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li> -->
 					<li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
 					<li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li>
 					<li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
@@ -50,7 +50,7 @@
 						<h1>Vijayasekhar Deepak</h1>
 						<h2>I'm a
 							<span class="txt-rotate" data-period="2000"
-								data-rotate='[ "Web Designer.", "Developer." ]'></span>
+								data-rotate='[ "Web Developer.", "Desktop App Developer." ]'></span>
 						</h2>
 					</div>
 				</div>
@@ -71,7 +71,7 @@
 					<div class="img-about img d-flex align-items-stretch">
 						<div class="overlay"></div>
 						<div class="img d-flex align-self-stretch align-items-center"
-							style="background-image:url(images/about.jpg);">
+							style="background-image:url(img/profile.jpg);">
 						</div>
 					</div>
 				</div>
@@ -393,13 +393,13 @@
 		</div>
 	</section>
 
-	<section class="ftco-section" id="services-section">
+	<!-- <section class="ftco-section" id="services-section">
 		<div class="container-fluid px-md-5">
 			<div class="row justify-content-center py-5 mt-5">
 				<div class="col-md-12 heading-section text-center ftco-animate">
 					<h1 class="big big-2">Services</h1>
 					<h2 class="mb-4">Services</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+					<p>Things I can work on</p>
 				</div>
 			</div>
 			<div class="row">
@@ -441,7 +441,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 
 	<section class="ftco-section ftco-project" id="projects-section">
@@ -450,7 +450,7 @@
 				<div class="col-md-12 heading-section text-center ftco-animate">
 					<h1 class="big big-2">Projects</h1>
 					<h2 class="mb-4">Our Projects</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+					<p>My previous work contribution</p>
 				</div>
 			</div>
 			<div class="row no-gutters">
@@ -471,7 +471,7 @@
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
 							<h3><a href="javascript:void(0)">OCIO</a></h3>
-							<span>Canada's Telecom Provider</span>
+							<span>Telecom Provider in Canada</span>
 							<p style="color: black">OCIO (Office of Chief Information Officer) is an internal Application to handle the Appraisal and Performance for Management level people. It is an Extended functionality application to the Analance 2.0 the product of Ducen IT.</p>
 						</div>
 					</div>
@@ -482,7 +482,7 @@
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
 							<h3><a href="javascript:void(0)">WSS</a></h3>
-							<span>Canada's Telecom Provider</span>
+							<span>Telecom Provider in Canada</span>
 							<p style="color: black">WSS (Wireless Self serve) is a small module in communication based E-commerce application. This module contains prepaid and postpaid data recharge functionality and Mobile purchase feature for their customers.</p>
 						</div>
 					</div>
@@ -494,7 +494,7 @@
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
 							<h3><a href="javascript:void(0)">WPM</a></h3>
-							<span>India's Pharmacy Company</span>
+							<span>Pharmacy Company in India</span>
 							<p style="color: black">WPM (Work Permit Manager) is an internal Application of a Pharmacy company, to monitor the regular activities of their employees on daily bases.</p>
 						</div>
 					</div>
@@ -505,7 +505,7 @@
 						<div class="overlay"></div>
 						<div class="text text-center p-4">
 							<h3><a href="javascript:void(0)">UPPM</a></h3>
-							<span>India's Pharmacy Company</span>
+							<span>Pharmacy Company in India</span>
 							<p style="color: black">UPPM (Ukraine Product Portfolio Management) is an Pharmacy company Application for medicine Approval process in Ukraine. It has 9 mandatory approval processes and has 3 optional processes for design approval processes.</p>
 						</div>
 					</div>
@@ -514,7 +514,7 @@
 		</div>
 	</section>
 
-	<section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
+	<!-- <section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
 		<div class="container-fluid px-md-5">
 			<div class="row d-md-flex align-items-center">
 				<div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
@@ -551,7 +551,7 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 	<section class="ftco-section" id="blog-section">
 		<div class="container">
