updated email id

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 							<ul class="about-info mt-4 px-md-0 px-2">
 								<li class="d-flex"><span>Name:</span> <span>Vijayasekhar Deepak</span></li>
 								<li class="d-flex"><span>Address:</span> <span>Chennai, Tamil Nadu, India</span></li>
-								<li class="d-flex"><span>Email:</span> <span>vijaydeepak7195@gmail.com</span></li>
+								<li class="d-flex"><span>Email:</span> <span>vijayasekhar.deepak@gmail.com</span></li>
 								<li class="d-flex"><span>Phone: </span> <span>+91 9489014021</span></li>
 							</ul>
 						</div>
@@ -636,7 +636,7 @@
 						</div>
 						<div>
 							<h3 class="mb-4">Email Address</h3>
-							<p><a href="mailto:vijaydeepak7195@gamil.com">vijaydeepak7195@gamil.com</a></p>
+							<p><a href="mailto:vijayasekhar.deepak@gamil.com">vijayasekhar.deepak@gamil.com</a></p>
 						</div>
 					</div>
 				</div>
