--- a/index.html
+++ b/index.html
@@ -636,7 +636,7 @@
 						</div>
 						<div>
 							<h3 class="mb-4">Email Address</h3>
-							<p><a href="mailto:vijayasekhar.deepak@gamil.com">vijayasekhar.deepak@gamil.com</a></p>
+							<p><a href="mailto:vijayasekhar.deepak@gmail.com">vijayasekhar.deepak@gmail.com</a></p>
 						</div>
 					</div>
 				</div>
